made some changes to the css for the navbar when on mobile to stop the menu from overlapping the content when closed

--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,9 @@
 header {
     
   width: 90%;
-  background-color: #3F8A8C;
-  background-image: linear-gradient(white, #3F8A8C);
-  border-radius: 16px;
-  color: #0B0835;
   padding: 16px;
   margin-top: 0;
-  margin-left: 5%;
-  box-shadow: 0px 15px 10px darkslategrey
+  margin-left: 4%;
 }
 
 /* body is essentially the container for everything displayed on the webpage */
@@ -81,14 +76,49 @@ nav {
   color: #0B0835;
 }
 
+.nav .search-container {
+  float: right;
+}
+
+.nav input[type=text] {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  border: none;
+  font-size: 17px;
+}
+
+.nav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.nav .search-container button:hover {
+  background: #ccc;
+}
+
 #toggle {
   display: none;
 }
 
+#banner {
+  width: 70%;
+}
 
 #logo {
   float:right;
-  width: 6%;
+  width: 16%;
+}
+
+#menu-icon {
+  width: 25%;
+  float: center;
+  padding: 16px;
 }
 
 footer {
@@ -146,24 +176,43 @@ footer a:hover {
       display: none;
   }
 
-  header {
-    display: none;
+
+  main {
+    margin-top: 40%;
+    padding: 16px;
   }
-  main {}
 
   nav, .container, .row {
       flex-direction: column;
+      width: 83%;
   }
 
-  
+  #banner {
+    width: 100%;
+  }
 
   nav {
-      margin-bottom: 10;
       position: absolute;
   }
 
   .nav-link {
       display: none;
+  }
+
+
+  .nav .search-container {
+    float: none;
+  }
+  .nav input[type=text], .nav .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 16px;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;  
   }
 
   #toggle {
